# meetup27Abril2026

ftgo-microservicios/: ARQUITECTURA.md  DEPLOY.md  DESIGN.md  MEETUP_27_ABRIL_2026.md  PERMISOS_IAM_IDENTITY_CENTER.md  README.md
ftgo-microservicios/frontend/: template.yaml
ftgo-microservicios/frontend/src/: __init__.py  handler.py
ftgo-microservicios/frontend/src/static/: config.js  index.html  style.css
ftgo-microservicios/frontend/static/: app.js
ftgo-microservicios/scripts/: migrar_por_dominio.py  migrar_sqlite_a_dynamodb.py  test_consumidores.sh  test_entregas.sh  test_pagos.sh  test_pedidos.sh  test_restaurantes.sh
ftgo-microservicios/servicios/consumidores/: pyproject.toml  template.yaml
ftgo-microservicios/servicios/consumidores/src/: __init__.py  handler.py
ftgo-microservicios/servicios/entregas/: pyproject.toml  template.yaml
ftgo-microservicios/servicios/entregas/src/: __init__.py  handler.py
ftgo-microservicios/servicios/pagos/: pyproject.toml  template.yaml
ftgo-microservicios/servicios/pagos/src/: __init__.py  handler.py
ftgo-microservicios/servicios/pedidos/: pyproject.toml  template.yaml
ftgo-microservicios/servicios/pedidos/src/: __init__.py  handler.py
ftgo-microservicios/servicios/restaurantes/: pyproject.toml  template.yaml
ftgo-microservicios/servicios/restaurantes/src/: __init__.py  handler.py
