[project]
name = "ftgo-consumidores"
version = "1.0.0"
description = "Microservicio de gestión de consumidores — FTGO"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "moto>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
